Change objectives capturing approach

--- a/src/assets/login.template.html
+++ b/src/assets/login.template.html
@@ -79,6 +79,14 @@
           border-top: solid 1px #eee;
         }
       }
+
+      .primary.jsx-3146657073 {
+        border-color: #008546 !important;
+        background: #008546 !important;
+        color: rgb(255, 255, 255) !important;
+        fill: rgb(255, 255, 255) !important;
+        font-weight: 500 !important;
+      }
     </style>
   </head>
   <body>
@@ -99,7 +107,7 @@
       <div class="right-side">
         <div id="login-container">
           <h3 style="color: #008546">MEL System For Your Organisation</h3>
-          <h5 style="color: #008546; text-align: center">
+          <h5 style="color: #008546; text-align: center; margin-top: 8px">
             Do Projects and Strategic plans monitoring and evaluation anywhere
             you are
           </h5>
@@ -119,8 +127,8 @@
           </p>
           <p style="margin-top: 50px; font-size: small; text-align: center">
             <em>
-              For demo contact mwakyusajosephatj@gmail.com or info@nectech.tz or
-              via +255 717 210 512
+              For demo contact <b>mwakyusajosephatj@gmail.com</b> or
+              <b>info@nectech.tz</b> or via <b>+255 717 210 512</b>
             </em>
           </p>
         </div>
